Update local service notebook

--- a/notebooks/Run Local Service.ipynb
+++ b/notebooks/Run Local Service.ipynb
@@ -51,18 +51,19 @@
     "submit_url = 'http://localhost:5000/query/submit'\n",
     "source = 'BRCA1'\n",
     "target = 'BRCA2'\n",
-    "search_options = {'source': source,\n",
-    "                  'target': target,\n",
-    "                  'bsco': 0,\n",
-    "                  'fplx_expand': False,\n",
-    "                  'k_shortest': 3,\n",
-    "                  'weighted': False,\n",
-    "                  'node_filter': ['CHEBI', 'FPLX', 'GO', 'HGNC', \n",
-    "                                  'HMDB', 'MESH', 'PUBCHEM'],\n",
-    "                  'path_length': False,\n",
-    "                  'stmt_filter': [],\n",
-    "                  'curated_db_only': False\n",
-    "                 }\n",
+    "search_options = {'source': 'BRCA1', \n",
+    "                  'target': 'BRCA2', \n",
+    "                  'stmt_filter': ['fplx', 'complex'], \n",
+    "                  'edge_git hash_blacklist': [], \n",
+    "                  'node_filter': ['hgnc', 'fplx'], \n",
+    "                  'node_blacklist': [], \n",
+    "                  'path_length': False, \n",
+    "                  'weighted': False, \n",
+    "                  'bsco': 0, \n",
+    "                  'curated_db_only': False, \n",
+    "                  'fplx_expand': False, \n",
+    "                  'k_shortest': 3, \n",
+    "                  'cull_best_node': 0}\n",
     "\n",
     "path_results = requests.post(url=submit_url, json=search_options).json()\n",
     "pprint(path_results)\n",
