Update file path, output, options

--- a/notebooks/Run Local Service.ipynb
+++ b/notebooks/Run Local Service.ipynb
@@ -15,11 +15,9 @@
     "Read about the available search options in the docstring of \n",
     "`IndraNetwork.handle_query()` in `depmap_analysis/network_functions/indra_network.py`.\n",
     "\n",
-    "Below we search for paths from `BRCA1` to `BRCA2` with a maximum path length \n",
-    "of 4 edges (maximum allowed), `'CHEBI', 'FPLX', 'GO', 'HGNC', 'HMDB', \n",
-    "'MESH'` and `'PUBCHEM'` as allowed node namespaces and `'activation', \n",
-    "'increaseamount', 'phosphorylation'` as allowed statement types in the edges \n",
-    "of the path.\n"
+    "Below we search for paths from `BRCA1` to `BRCA2` with `'HGNC', 'FPLX'` as allowed node namespaces and `'fplx', \n",
+    "'complex'` as ignored relation types in the edges of the path. An edge with a `'fplx'` relation is were the two agents \n",
+    "either have a child/parent relation in a family and/or belong to the same complex.\n"
    ],
    "metadata": {
     "collapsed": false
@@ -51,8 +49,8 @@
     "submit_url = 'http://localhost:5000/query/submit'\n",
     "source = 'BRCA1'\n",
     "target = 'BRCA2'\n",
-    "search_options = {'source': 'BRCA1', \n",
-    "                  'target': 'BRCA2', \n",
+    "search_options = {'source': source, \n",
+    "                  'target': target, \n",
     "                  'stmt_filter': ['fplx', 'complex'], \n",
     "                  'edge_hash_blacklist': [], \n",
     "                  'node_filter': ['hgnc', 'fplx'], \n",
