--- a/notebooks/DepMap Results Comparisons - retroactive KIRREL1.ipynb
+++ b/notebooks/DepMap Results Comparisons - retroactive KIRREL1.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "basepath = '../data/19Q4_explainer'"
+    "basepath = '../../datasets/depmap_analysis/output_data/20Q4v2_D2v6_20210126/'"
    ]
   },
   {
@@ -533,6 +533,7 @@
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
