--- a/notebooks/Biomarkers of Dependency.ipynb
+++ b/notebooks/Biomarkers of Dependency.ipynb
@@ -2576,7 +2576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2585,7 +2585,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "slc_genes = slc_df['Approved symbol'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from depmap_analysis.scripts.depmap_script2 import main as run_depmap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z_copy = dep_z.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z_copy = z_bool"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "nan"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "float('nan')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "non_slc_genes = [col for col in z_copy.columns if col not in slc_genes]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z_copy[non_slc_genes] = float('nan')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inet_file = '/Users/johnbachman/Dropbox/1johndata/Knowledge File/Biology/Research' \\\n",
+    "            '/Big Mechanism/datasets/depmap_analysis/graphs/2021-01-06/indranet_dir_graph.pkl'\n",
+    "with open(inet_file, 'rb') as f:\n",
+    "    inet = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run_depmap(inet, output_file, graph_type, sd_range,\n",
+    "           z_score=dep_z, expl_funcs=expl_funcs, overwrite=True,\n",
+    "           depmap_date='21q1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2595,7 +2692,205 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>HGNC ID (gene)</th>\n",
+       "      <th>Approved symbol</th>\n",
+       "      <th>Approved name</th>\n",
+       "      <th>Previous symbols</th>\n",
+       "      <th>Synonyms</th>\n",
+       "      <th>Chromosome</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>HGNC:10956</td>\n",
+       "      <td>SLCO1A2</td>\n",
+       "      <td>solute carrier organic anion transporter famil...</td>\n",
+       "      <td>SLC21A3</td>\n",
+       "      <td>OATP,OATP1A2,OATP-A</td>\n",
+       "      <td>12p12.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>HGNC:10959</td>\n",
+       "      <td>SLCO1B1</td>\n",
+       "      <td>solute carrier organic anion transporter famil...</td>\n",
+       "      <td>SLC21A6</td>\n",
+       "      <td>OATP-C,LST-1,OATP1B1</td>\n",
+       "      <td>12p12.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>HGNC:10961</td>\n",
+       "      <td>SLCO1B3</td>\n",
+       "      <td>solute carrier organic anion transporter famil...</td>\n",
+       "      <td>SLC21A8</td>\n",
+       "      <td>OATP8,OATP1B3</td>\n",
+       "      <td>12p12.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>HGNC:32934</td>\n",
+       "      <td>SLCO1B7</td>\n",
+       "      <td>solute carrier organic anion transporter famil...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>LST3,SLC21A21</td>\n",
+       "      <td>12p12.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>HGNC:13819</td>\n",
+       "      <td>SLCO1C1</td>\n",
+       "      <td>solute carrier organic anion transporter famil...</td>\n",
+       "      <td>SLC21A14</td>\n",
+       "      <td>OATP-F,OATP1C1,OATP1</td>\n",
+       "      <td>12p12.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>418</th>\n",
+       "      <td>HGNC:26001</td>\n",
+       "      <td>SLC66A1</td>\n",
+       "      <td>solute carrier family 66 member 1</td>\n",
+       "      <td>PQLC2</td>\n",
+       "      <td>FLJ20320,LAAT-1,LAAT1</td>\n",
+       "      <td>1p36.13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>419</th>\n",
+       "      <td>HGNC:26188</td>\n",
+       "      <td>SLC66A2</td>\n",
+       "      <td>solute carrier family 66 member 2</td>\n",
+       "      <td>PQLC1</td>\n",
+       "      <td>FLJ22378</td>\n",
+       "      <td>18q23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>420</th>\n",
+       "      <td>HGNC:28503</td>\n",
+       "      <td>SLC66A3</td>\n",
+       "      <td>solute carrier family 66 member 3</td>\n",
+       "      <td>C2orf22,PQLC3</td>\n",
+       "      <td>MGC33602</td>\n",
+       "      <td>2p25.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>421</th>\n",
+       "      <td>HGNC:2518</td>\n",
+       "      <td>CTNS</td>\n",
+       "      <td>cystinosin, lysosomal cystine transporter</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CTNS-LSB,PQLC4,SLC66A4</td>\n",
+       "      <td>17p13.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>422</th>\n",
+       "      <td>HGNC:7207</td>\n",
+       "      <td>MPDU1</td>\n",
+       "      <td>mannose-P-dolichol utilization defect 1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>SL15,Lec35,PQLC5,CDGIf,SLC66A5</td>\n",
+       "      <td>17p13.1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>423 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    HGNC ID (gene) Approved symbol  \\\n",
+       "0       HGNC:10956         SLCO1A2   \n",
+       "1       HGNC:10959         SLCO1B1   \n",
+       "2       HGNC:10961         SLCO1B3   \n",
+       "3       HGNC:32934         SLCO1B7   \n",
+       "4       HGNC:13819         SLCO1C1   \n",
+       "..             ...             ...   \n",
+       "418     HGNC:26001         SLC66A1   \n",
+       "419     HGNC:26188         SLC66A2   \n",
+       "420     HGNC:28503         SLC66A3   \n",
+       "421      HGNC:2518            CTNS   \n",
+       "422      HGNC:7207           MPDU1   \n",
+       "\n",
+       "                                         Approved name Previous symbols  \\\n",
+       "0    solute carrier organic anion transporter famil...          SLC21A3   \n",
+       "1    solute carrier organic anion transporter famil...          SLC21A6   \n",
+       "2    solute carrier organic anion transporter famil...          SLC21A8   \n",
+       "3    solute carrier organic anion transporter famil...              NaN   \n",
+       "4    solute carrier organic anion transporter famil...         SLC21A14   \n",
+       "..                                                 ...              ...   \n",
+       "418                  solute carrier family 66 member 1            PQLC2   \n",
+       "419                  solute carrier family 66 member 2            PQLC1   \n",
+       "420                  solute carrier family 66 member 3    C2orf22,PQLC3   \n",
+       "421          cystinosin, lysosomal cystine transporter              NaN   \n",
+       "422            mannose-P-dolichol utilization defect 1              NaN   \n",
+       "\n",
+       "                           Synonyms Chromosome  \n",
+       "0               OATP,OATP1A2,OATP-A    12p12.1  \n",
+       "1              OATP-C,LST-1,OATP1B1    12p12.1  \n",
+       "2                     OATP8,OATP1B3    12p12.2  \n",
+       "3                     LST3,SLC21A21    12p12.2  \n",
+       "4              OATP-F,OATP1C1,OATP1    12p12.2  \n",
+       "..                              ...        ...  \n",
+       "418           FLJ20320,LAAT-1,LAAT1    1p36.13  \n",
+       "419                        FLJ22378      18q23  \n",
+       "420                        MGC33602     2p25.1  \n",
+       "421          CTNS-LSB,PQLC4,SLC66A4    17p13.2  \n",
+       "422  SL15,Lec35,PQLC5,CDGIf,SLC66A5    17p13.1  \n",
+       "\n",
+       "[423 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "slc_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2605,7 +2900,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'PNPT1' in mitogenes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -3614,7 +3929,7 @@
        " ...]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3625,7 +3940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
