--- a/notebooks/Biomarkers of Dependency.ipynb
+++ b/notebooks/Biomarkers of Dependency.ipynb
@@ -2893,7 +2893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2902,7 +2902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2911,7 +2911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2923,7 +2923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2948,69 +2948,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO: [2021-03-04 11:49:46] depmap_analysis.scripts.depmap_script2 - Using explained set with 1133 entities\n",
-      "INFO: [2021-03-04 11:49:46] depmap_analysis.scripts.depmap_script2 - Filtering correlations to 2+ SD\n",
-      "INFO: [2021-03-04 11:50:15] depmap_analysis.scripts.depmap_script2 - Leaving correlation matrix column names as is\n",
-      "INFO: [2021-03-04 11:50:15] depmap_analysis.scripts.depmap_script2 - Doing correlation matching with unsigned graph\n",
-      "WARNING: [2021-03-04 11:50:15] depmap_analysis.util.io_functions - Can't parse string \"no info\" for date using regex pattern r\"\\d{8}\"\n",
-      "WARNING: [2021-03-04 11:50:15] depmap_analysis.util.io_functions - Can't parse string \"no info\" for date using regex pattern r\"\\d{8}\"\n",
-      "INFO: [2021-03-04 11:50:15] depmap_analysis.scripts.depmap_script2 - Calculating number of pairs to check...\n",
-      "INFO: [2021-03-04 11:50:29] depmap_analysis.scripts.depmap_script2 - Starting workers at 11:50:29 with about 26834 pairs to check\n",
-      "INFO: [2021-03-04 11:50:59] depmap_analysis.scripts.depmap_script2 - Appending a result\n",
-      "INFO: [2021-03-04 11:51:21] depmap_analysis.scripts.depmap_script2 - Appending a result\n",
-      "INFO: [2021-03-04 11:51:42] depmap_analysis.scripts.depmap_script2 - Appending a result\n",
-      "INFO: [2021-03-04 11:52:05] depmap_analysis.scripts.depmap_script2 - Done submitting work to pool workers\n",
-      "INFO: [2021-03-04 11:52:10] depmap_analysis.scripts.depmap_script2 - Appending a result\n",
-      "INFO: [2021-03-04 11:52:10] depmap_analysis.scripts.depmap_script2 - Generating DepMapExplainer with output from 4 results\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Execution time: 101.48922228813171 seconds\n",
-      "Done at 11:52:10\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO: [2021-03-04 11:52:11] depmap_analysis.scripts.depmap_script2 - Dumping results to slc_explainer.pkl\n",
-      "INFO: [2021-03-04 11:52:11] depmap_analysis.util.io_functions - Dumping to pickle file /Users/johnbachman/Dropbox/1johndata/knowledge file/Biology/Research/Big Mechanism/depmap_analysis/notebooks/slc_explainer.pkl\n",
-      "INFO: [2021-03-04 11:52:12] depmap_analysis.util.io_functions - Finished dumping to pickle\n",
-      "INFO: [2021-03-04 11:52:12] depmap_analysis.scripts.depmap_script2 - Script finished\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'colummns'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-39-c3022dcf4de9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m run_depmap(inet, dme_file, 'unsigned', sd_range, subset_list=slc_genes,\n\u001b[1;32m      2\u001b[0m            \u001b[0mz_score\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdep_z\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moverwrite\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreactome_dict\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mreactome_dict\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m            depmap_date='21q1', expl_funcs=expl_funcs, apriori_explained=apriori_mapping, n_chunks=4)\n\u001b[0m",
-      "\u001b[0;32m~/Dropbox/1johndata/Knowledge File/Biology/Research/Big Mechanism/depmap_analysis/depmap_analysis/scripts/depmap_script2.py\u001b[0m in \u001b[0;36mmain\u001b[0;34m(indra_net, outname, graph_type, sd_range, random, z_score, z_score_file, raw_data, raw_corr, expl_funcs, pb_node_mapping, n_chunks, is_a_part_of, immediate_only, return_unexplained, reactome_dict, subset_list, apriori_explained, allowed_ns, allowed_sources, info, indra_date, indra_net_file, depmap_date, sample_size, shuffle, overwrite, normalize_names, argparse_dict)\u001b[0m\n\u001b[1;32m    714\u001b[0m                           pyobj=explanations, overwrite=overwrite)\n\u001b[1;32m    715\u001b[0m     \u001b[0mlogger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Script finished'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 716\u001b[0;31m     \u001b[0mexplanations\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msummarize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    717\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    718\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Dropbox/1johndata/Knowledge File/Biology/Research/Big Mechanism/depmap_analysis/depmap_analysis/util/statistics.py\u001b[0m in \u001b[0;36msummarize\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    241\u001b[0m         \u001b[0;34m\"\"\"Count explanations and print a summary count of them\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    242\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msummary_str\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 243\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msummary_str\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_summary_str\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    244\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msummary_str\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    245\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Dropbox/1johndata/Knowledge File/Biology/Research/Big Mechanism/depmap_analysis/depmap_analysis/util/statistics.py\u001b[0m in \u001b[0;36mget_summary_str\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    304\u001b[0m         \u001b[0;31m# ToDo: Fix order of output\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    305\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msummary_str\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 306\u001b[0;31m             \u001b[0msummary\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_summary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    307\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msummary_str\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    308\u001b[0m                 \u001b[0;34m'Explanation'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mljust\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m22\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'count\\n'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'-'\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Explanation'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Dropbox/1johndata/Knowledge File/Biology/Research/Big Mechanism/depmap_analysis/depmap_analysis/util/statistics.py\u001b[0m in \u001b[0;36mget_summary\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    289\u001b[0m             if all([cn in self.stats_df.colummns for cn in\n\u001b[1;32m    290\u001b[0m                     [st_colname, axb_colname, bxa_colname, apriori_colname,\n\u001b[0;32m--> 291\u001b[0;31m                      ab_colname, ba_colname, react_colname]]):\n\u001b[0m\u001b[1;32m    292\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msummary\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'explained no reactome, direct, apriori'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    293\u001b[0m                     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_axb_type_no_react\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Dropbox/1johndata/Knowledge File/Biology/Research/Big Mechanism/depmap_analysis/depmap_analysis/util/statistics.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    287\u001b[0m             \u001b[0;31m# Count axb type explanations that does not have reactome,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    288\u001b[0m             \u001b[0;31m# direct/complex or apriori explanations\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 289\u001b[0;31m             if all([cn in self.stats_df.colummns for cn in\n\u001b[0m\u001b[1;32m    290\u001b[0m                     [st_colname, axb_colname, bxa_colname, apriori_colname,\n\u001b[1;32m    291\u001b[0m                      ab_colname, ba_colname, react_colname]]):\n",
-      "\u001b[0;32m~/.virtualenvs/py37env/lib/python3.7/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5177\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5178\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5179\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5180\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5181\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'colummns'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "run_depmap(inet, dme_file, 'unsigned', sd_range, subset_list=slc_genes,\n",
-    "           z_score=dep_z, overwrite=True, reactome_dict=reactome_dict,\n",
-    "           depmap_date='21q1', expl_funcs=expl_funcs, apriori_explained=apriori_mapping, n_chunks=4)"
+    "#run_depmap(inet, dme_file, 'unsigned', sd_range, subset_list=slc_genes,\n",
+    "#           z_score=dep_z, overwrite=True, reactome_dict=reactome_dict,\n",
+    "#           depmap_date='21q1', expl_funcs=expl_funcs, apriori_explained=apriori_mapping, n_chunks=4)"
    ]
   },
   {
@@ -3027,7 +2971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3037,7 +2981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3047,7 +2991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3058,11 +3002,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dme.plot_corr_stats('slc_output', z_corr=dep_z)"
+    "dme.get_filtered_triples_df?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: [2021-03-04 12:13:27] depmap_analysis.util.statistics - s3_location is not set\n",
+      "INFO: [2021-03-04 12:13:27] depmap_analysis.util.statistics - Generating corr stats data\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'get'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-57-6e7e4d24e29a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdme\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot_corr_stats\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'slc_output'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mz_corr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdep_z\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/Dropbox/1johndata/Knowledge File/Biology/Research/Big Mechanism/depmap_analysis/depmap_analysis/util/statistics.py\u001b[0m in \u001b[0;36mplot_corr_stats\u001b[0;34m(self, outdir, z_corr, show_plot, max_proc, index_counter, max_so_pairs_size, mp_pairs, run_linear, log_scale_y)\u001b[0m\n\u001b[1;32m    577\u001b[0m             \u001b[0mz_corr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mz_corr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_proc\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmax_proc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    578\u001b[0m             \u001b[0mmax_so_pairs_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmax_so_pairs_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmp_pairs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmp_pairs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 579\u001b[0;31m             \u001b[0mrun_linear\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mrun_linear\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    580\u001b[0m         )\n\u001b[1;32m    581\u001b[0m         \u001b[0msd_str\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_sd_str\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Dropbox/1johndata/Knowledge File/Biology/Research/Big Mechanism/depmap_analysis/depmap_analysis/util/statistics.py\u001b[0m in \u001b[0;36mget_corr_stats_axb\u001b[0;34m(self, z_corr, max_proc, max_so_pairs_size, mp_pairs, run_linear)\u001b[0m\n\u001b[1;32m    490\u001b[0m                 \u001b[0;31m# Load reactome if present\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    491\u001b[0m                 \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 492\u001b[0;31m                     \u001b[0mreactome\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_reactome\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    493\u001b[0m                 \u001b[0;32mexcept\u001b[0m \u001b[0mFileNotFoundError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    494\u001b[0m                     \u001b[0mlogger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'No reactome file used in script'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Dropbox/1johndata/Knowledge File/Biology/Research/Big Mechanism/depmap_analysis/depmap_analysis/util/statistics.py\u001b[0m in \u001b[0;36mload_reactome\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    211\u001b[0m         \u001b[0mTuple\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mDict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mList\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mList\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    212\u001b[0m         \"\"\"\n\u001b[0;32m--> 213\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscript_settings\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'argparse_info'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'reactome_dict'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    214\u001b[0m             \u001b[0mreactome_file\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    215\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscript_settings\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'argparse_info'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'reactome_dict'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'get'"
+     ]
+    }
+   ],
+   "source": [
+    "#dme.plot_corr_stats('slc_output', z_corr=dep_z)"
    ]
   },
   {
