--- a/notebooks/Biomarkers of Dependency.ipynb
+++ b/notebooks/Biomarkers of Dependency.ipynb
@@ -63,22 +63,21 @@
    "source": [
     "import pickle\n",
     "from time import time\n",
+    "from os import environ\n",
     "from os.path import join, expanduser\n",
     "from collections import defaultdict, Counter\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from scipy import stats\n",
     "from matplotlib import pyplot as plt\n",
     "from indra.databases import hgnc_client\n",
-    "from indra.util import plot_formatting as pf\n",
     "from indra.tools import assemble_corpus as ac\n",
     "\n",
     "from depmap_analysis.scripts.depmap_script2 import main as run_depmap\n",
     "from depmap_analysis.scripts.depmap_script2 import mito_file\n",
     "from depmap_analysis.preprocessing import get_mitocarta_info\n",
     "from depmap_analysis.network_functions.depmap_network_functions import corr_matrix_to_generator\n",
+    "from depmap_analysis.util.statistics import get_z, get_logp\n",
     "\n",
-    "from scipy.stats import linregress\n",
     "from scipy import stats\n",
     "\n",
     "%matplotlib notebook\n",
@@ -121,7 +120,8 @@
    "outputs": [],
    "source": [
     "#basedir = 'data/20q4'\n",
-    "basedir = '/Users/johnbachman/Dropbox/1johndata/Knowledge File/Biology/Research/Big Mechanism/datasets/depmap_analysis/depmap/21q1'\n",
+    "basedir_john = '/Users/johnbachman/Dropbox/1johndata/Knowledge File/Biology/Research/Big Mechanism/datasets/depmap_analysis/depmap/21q1'\n",
+    "basedir = environ.get('BASEPATH', basedir_john)\n",
     "figdir = join(expanduser('~'), 'Dropbox/DARPA projects/papers/INDRA paper 2/figures/figure_panels')"
    ]
   },
@@ -260,44 +260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "from scipy.special import erfcinv\n",
-    "from scipy.stats import norm, halfnorm\n",
-    "\n",
-    "def _logerfcinv_approx(logp):\n",
-    "    \"\"\"Approximate inverse of log of complementary error function for p close to 0\n",
-    "    \n",
-    "    Approximation taken from J. M. Blair, C. A. Edwards, and J. H. Johnson, \"Rational\n",
-    "    Chebyshev Approximations for the Inverse of the Error Function\"\n",
-    "    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    logp : float\n",
-    "        \n",
-    "        \n",
-    "    Returns\n",
-    "    -------\n",
-    "    float\n",
-    "    \"\"\"\n",
-    "    P = np.array([.1550470003116,1.382719649631,.690969348887,\n",
-    "                  -1.128081391617, .680544246825,-.16444156791])\n",
-    "    Q = np.array([.155024849822,1.385228141995,1.000000000000])\n",
-    "    t = 1.0/np.sqrt(-logp)\n",
-    "    numerator = P[0]/t + P[1] + t * (P[2] + t * (P[3] + t * (P[4] + t * P[5])))\n",
-    "    denominator = Q[0] + t * (Q[1] + t * Q[2])\n",
-    "    return numerator / denominator\n",
-    "\n",
-    "\n",
-    "def logerfcinv(logp):\n",
-    "    \"\"\"Calculate inverse of complementary error function given log of argument\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    return np.where(logp > -10, erfcinv(np.exp(logp)),\n",
-    "                    _logerfcinv_approx(logp))\n",
-    "\n",
-    "def norminv_logcdf(logp):\n",
-    "    \"\"\"Inverse CDF corresponding to log of p value\"\"\"\n",
-    "    return -np.sqrt(2) * logerfcinv(np.log(2) + logp)"
+    "import numpy as np\n"
    ]
   },
   {
@@ -342,54 +305,7 @@
     "        data_n = pd.read_hdf('%s.h5' % filepath)\n",
     "    elapsed = time() - start\n",
     "    print(int(elapsed), 'sec')\n",
-    "    return data_n\n",
-    "\n",
-    "\n",
-    "def get_logp(recalculate, data_n, data_corr, filename, method='beta'):\n",
-    "    if method not in ('t', 'beta'):\n",
-    "        raise ValueError('Method must be t or beta')\n",
-    "    start = time()\n",
-    "    filepath = join(basedir, filename)\n",
-    "    if recalculate:\n",
-    "        # T-statistic method\n",
-    "        # See https://stackoverflow.com/a/24469099\n",
-    "        # See https://support.minitab.com/en-us/minitab-express/1/help-and-how-to/basic-statistics/inference/supporting-topics/basics/manually-calculate-a-p-value/\n",
-    "        if method == 't':\n",
-    "            t = data_corr * np.sqrt((data_n - 2)/(1 - data_corr * data_corr))\n",
-    "            logp = np.log(2) + stats.t.logsf(t.abs(), data_n-2)\n",
-    "        # Beta-distribution method\n",
-    "        # https://github.com/scipy/scipy/blob/v1.6.2/scipy/stats/stats.py#L3781-L3962\n",
-    "        elif method == 'beta':\n",
-    "            ab = data_n/2 - 1\n",
-    "            logp = np.log(2) + stats.beta.logcdf(-abs(data_corr), ab, ab, loc=-1, scale=2)\n",
-    "        # Make dataframe\n",
-    "        data_logp = pd.DataFrame(logp, columns=data_corr.columns, index=data_corr.index)\n",
-    "        data_logp.to_hdf('%s.h5' % filepath, filename)\n",
-    "    else:\n",
-    "        data_logp = pd.read_hdf('%s.h5' % filepath)\n",
-    "    elapsed = time() - start\n",
-    "    print(elapsed, \"sec\")\n",
-    "    return data_logp\n",
-    "\n",
-    "\n",
-    "def get_z(recalculate, data_logp, data_corr, filename):\n",
-    "    start = time()\n",
-    "    filepath = join(basedir, filename)\n",
-    "    if recalculate:\n",
-    "        #z_mat = stats.norm.ppf(1 - np.exp(data_logp) / 2)\n",
-    "        #z_mat = -norminv_logcdf(data_logp - np.log(2))\n",
-    "        z_mat = abs(norminv_logcdf(data_logp - np.log(2)))\n",
-    "        data_sign = data_corr.copy()\n",
-    "        data_sign[data_sign < 0] = -1\n",
-    "        data_sign[data_sign > 0] = 1\n",
-    "        data_z = data_sign * pd.DataFrame(z_mat, index=data_logp.columns,\n",
-    "                                          columns=data_logp.columns)\n",
-    "        data_z.to_hdf('%s.h5' % filepath, filename)\n",
-    "    else:\n",
-    "        data_z = pd.read_hdf('%s.h5' % filepath)\n",
-    "    elapsed = time() - start\n",
-    "    print(elapsed, \"sec\")\n",
-    "    return data_z"
+    "    return data_n\n"
    ]
   },
   {
@@ -1188,7 +1104,7 @@
    "source": [
     "recalculate = False\n",
     "\n",
-    "rnai_logp = get_logp(recalculate, rnai_n, rnai_corr, 'rnai_logp')"
+    "rnai_logp = get_logp(recalculate, rnai_n, rnai_corr, join(basedir, 'rnai_logp'))"
    ]
   },
   {
@@ -1477,7 +1393,7 @@
    "source": [
     "recalculate = True\n",
     "\n",
-    "rnai_z = get_z(recalculate, rnai_logp, rnai_corr, 'rnai_z_log')\n",
+    "rnai_z = get_z(recalculate, rnai_logp, rnai_corr, join(basedir, 'rnai_z_log'))\n",
     "#rnai_z_ppf = get_z(recalculate, rnai_logp, rnai_corr, 'rnai_z')"
    ]
   },
@@ -2079,7 +1995,7 @@
    "source": [
     "recalculate = False\n",
     "\n",
-    "crispr_logp = get_logp(recalculate, crispr_n, crispr_corr, 'crispr_logp')"
+    "crispr_logp = get_logp(recalculate, crispr_n, crispr_corr, join(basedir, 'crispr_logp'))"
    ]
   },
   {
@@ -2327,7 +2243,7 @@
     "recalculate = False\n",
     "\n",
     "#crispr_z_ppf = get_z(recalculate, crispr_logp, crispr_corr, 'crispr_z')\n",
-    "crispr_z = get_z(recalculate, crispr_logp, crispr_corr, 'crispr_z_log')"
+    "crispr_z = get_z(recalculate, crispr_logp, crispr_corr, join(basedir, 'crispr_z_log'))"
    ]
   },
   {
@@ -5079,7 +4995,7 @@
    "outputs": [],
    "source": [
     "import requests\n",
-    "from indra.util import batch_iter\n",
+    "\n",
     "chembl_url = 'https://www.ebi.ac.uk/chembl/api/data/substructure/'\n",
     "dmik_to_chembl = {}\n",
     "for ix, ik in enumerate(depmap_smiles_to_ik.values()):\n",
@@ -5751,7 +5667,7 @@
    "source": [
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import explained_variance_score\n",
-    "from sklearn.kernel_ridge import KernelRidge\n",
+    "\n",
     "lr = LinearRegression()"
    ]
   },
@@ -6082,10 +5998,10 @@
      "evalue": "name 'rnai_logp' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-140-7ac0cadc5a25>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mrnai_logp\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'PSMA2'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'RPL18'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'rnai_logp' is not defined"
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[0;32m<ipython-input-140-7ac0cadc5a25>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0;31m \u001B[0mrnai_logp\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;34m'PSMA2'\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;34m'RPL18'\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m: name 'rnai_logp' is not defined"
      ]
     }
    ],
