Move explainer to new file, ipnb functions to statistics.py

--- a/notebooks/Biomarkers of Dependency.ipynb
+++ b/notebooks/Biomarkers of Dependency.ipynb
@@ -62,7 +62,6 @@
    ],
    "source": [
     "import pickle\n",
-    "from time import time\n",
     "from os import environ\n",
     "from os.path import join, expanduser\n",
     "from collections import defaultdict, Counter\n",
@@ -76,7 +75,7 @@
     "from depmap_analysis.scripts.depmap_script2 import mito_file\n",
     "from depmap_analysis.preprocessing import get_mitocarta_info\n",
     "from depmap_analysis.network_functions.depmap_network_functions import corr_matrix_to_generator\n",
-    "from depmap_analysis.util.statistics import get_z, get_logp\n",
+    "from depmap_analysis.util.statistics import get_z, get_logp, get_n\n",
     "\n",
     "from scipy import stats\n",
     "\n",
@@ -251,7 +250,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Functions from Albert to calculate the inverse log CDF of the normal distribution:"
+    "Functions from Albert to calculate the inverse log CDF of the normal distribution:\n",
+    "(moved to depmap_analysis.util.statistics)"
    ]
   },
   {
@@ -276,36 +276,7 @@
     "        data_corr.to_hdf('%s.h5' % filepath, filename)\n",
     "    else:\n",
     "        data_corr = pd.read_hdf('%s.h5' % filepath)\n",
-    "    return data_corr\n",
-    "\n",
-    "\n",
-    "def get_n(recalculate, data_df, data_corr, filename):\n",
-    "    start = time()\n",
-    "    filepath = join(basedir, filename)\n",
-    "    if recalculate:\n",
-    "        num_cols = data_df.shape[1]\n",
-    "        data_mat = data_df._get_numeric_data().to_numpy(dtype=float,\n",
-    "                                                   na_value=np.nan, copy=False)\n",
-    "        n_mat = np.zeros((num_cols, num_cols))\n",
-    "        group_start = time()\n",
-    "        for a_ix in range(num_cols):\n",
-    "            if a_ix % 100 == 0:\n",
-    "                print(a_ix, '%.2f' % (time() - group_start), 'sec per round,',\n",
-    "                      int(time() - start), 'sec total')\n",
-    "                group_start = time()\n",
-    "            n_mat[a_ix, a_ix] = (~np.isnan(data_mat[:, a_ix])).sum()\n",
-    "            for b_ix in range(a_ix + 1, num_cols):\n",
-    "                n = (~np.isnan(data_mat[:, a_ix]) &\n",
-    "                     ~np.isnan(data_mat[:, b_ix])).sum()\n",
-    "                n_mat[a_ix, b_ix] = n\n",
-    "                n_mat[b_ix, a_ix] = n\n",
-    "        data_n = pd.DataFrame(n_mat, index=data_df.columns, columns=data_df.columns)\n",
-    "        data_n.to_hdf('%s.h5' % filepath, filename)\n",
-    "    else:\n",
-    "        data_n = pd.read_hdf('%s.h5' % filepath)\n",
-    "    elapsed = time() - start\n",
-    "    print(int(elapsed), 'sec')\n",
-    "    return data_n\n"
+    "    return data_corr\n"
    ]
   },
   {
@@ -863,7 +834,7 @@
    "source": [
     "recalculate = False\n",
     "\n",
-    "rnai_n = get_n(recalculate, rnai_df, rnai_corr, 'rnai_n')"
+    "rnai_n = get_n(recalculate, rnai_df, rnai_corr, join(basedir, 'rnai_n'))"
    ]
   },
   {
@@ -1969,7 +1940,7 @@
    "source": [
     "recalculate = False\n",
     "\n",
-    "crispr_n = get_n(recalculate, crispr_df, crispr_corr, 'crispr_n')"
+    "crispr_n = get_n(recalculate, crispr_df, crispr_corr, join(basedir, 'crispr_n'))"
    ]
   },
   {
