Remove unnecessary argument in get_n call

--- a/notebooks/Biomarkers of Dependency.ipynb
+++ b/notebooks/Biomarkers of Dependency.ipynb
@@ -834,7 +834,7 @@
    "source": [
     "recalculate = False\n",
     "\n",
-    "rnai_n = get_n(recalculate, rnai_df, rnai_corr, join(basedir, 'rnai_n'))"
+    "rnai_n = get_n(recalculate, rnai_df, join(basedir, 'rnai_n'))"
    ]
   },
   {
@@ -1940,7 +1940,7 @@
    "source": [
     "recalculate = False\n",
     "\n",
-    "crispr_n = get_n(recalculate, crispr_df, crispr_corr, join(basedir, 'crispr_n'))"
+    "crispr_n = get_n(recalculate, crispr_df, join(basedir, 'crispr_n'))"
    ]
   },
   {
